improve author message function