@@ -6,9 +6,12 @@ import com.bjfu.paperSystem.javabeans.EmailMessage;
 import com.bjfu.paperSystem.javabeans.User;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
+import java.util.stream.Collectors;
 @Service
 public class messageServiceImpl implements messageService {
     @Autowired
@@ -18,13 +21,23 @@ public class messageServiceImpl implements messageService {
     @Override
     public Map<String, Object> getAuthorMessageCenter(User loginUser) {
         Map<String, Object> data = new HashMap<>();
-        List<ClientMessage> clientMsgs = clientMsgService.findMessageByReceiver(loginUser.getUserId());
+        List<ClientMessage> receivedMsgs = clientMsgService.findMessageByReceiver(loginUser.getUserId());
+        List<ClientMessage> sentMsgs = clientMsgService.findMessageBySender(loginUser.getUserId());
+        List<ClientMessage> allClientMsgs = new ArrayList<>();
+        if (receivedMsgs != null) allClientMsgs.addAll(receivedMsgs);
+        if (sentMsgs != null) allClientMsgs.addAll(sentMsgs);
+        List<ClientMessage> sortedClientMsgs = allClientMsgs.stream()
+                .filter(msg -> msg.getSendingTime() != null)
+                .sorted((m1, m2) -> m2.getSendingTime().compareTo(m1.getSendingTime()))
+                .collect(Collectors.toList());
         List<EmailMessage> allEmailMsgs = emailMessageDao.findByReceiverEmailWithManuscript(loginUser.getEmail());
         List<EmailMessage> filteredEmails = allEmailMsgs.stream()
-                .filter(email -> email.getManuscript() != null &&
-                        email.getManuscript().getAuthorId() == loginUser.getUserId())
-                .toList();
-        data.put("clientMsgs", clientMsgs);
+                .filter(email -> {
+                    if (email.getManuscript() == null) return false;
+                    return Objects.equals(email.getManuscript().getAuthorId(), loginUser.getUserId());
+                })
+                .collect(Collectors.toList());
+        data.put("clientMsgs", sortedClientMsgs);
         data.put("emailMsgs", filteredEmails);
         return data;
     }
